@@ -9,7 +9,7 @@ ac_cv_style_mount,
 case "${host_os_name}" in
 	solaris1* | sunos[[34]]* | bsdi[[12]]* )
 			ac_cv_style_mount=default ;;
-	hpux9* | hpux10* )
+	hpux[[6-9]]* | hpux10* )
 			ac_cv_style_mount=hpux ;;
 	svr4* | sysv4* | solaris* | sunos* | aoi* | hpux* )
 			ac_cv_style_mount=svr4 ;;
@@ -17,12 +17,10 @@ case "${host_os_name}" in
 			ac_cv_style_mount=bsdi3 ;;
 	aix* )
 			ac_cv_style_mount=aix ;;
-	hpux* )
-			ac_cv_style_mount=hpux ;;
-	irix* )
-			ac_cv_style_mount=irix6 ;;
 	irix5* )
 			ac_cv_style_mount=irix5 ;;
+	irix* )
+			ac_cv_style_mount=irix6 ;;
 	isc3* )
 			ac_cv_style_mount=isc3 ;;
 	linux* )
