@@ -7,10 +7,8 @@ ac_cv_yp_order_outorder,
 [
 # select the correct type
 case "${host_os}" in
-changequote(<<, >>)dnl
-	aix3* | aix4.[0-2]* | sunos[34]* | solaris1* )
+	aix3* | aix4.[[0-2]]* | sunos[[34]]* | solaris1* )
 		ac_cv_yp_order_outorder=int ;;
-changequote([, ])dnl
 	solaris* | svr4* | sysv4* | sunos* | hpux* | aix* )
 		ac_cv_yp_order_outorder="unsigned long" ;;
 	osf* )
